fix vertical alignment on tables

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -115,6 +115,12 @@ footer {
 	
 	table {
 		min-width: 100%;
+		
+		tr {
+			td, th {
+				vertical-align: top;
+			}
+		}
 	}
 	
 	ul {
